--- a/css/reveal.scss
+++ b/css/reveal.scss
@@ -273,8 +273,8 @@ $controlsArrowAngleActive: 36deg;
 	display: none;
 	position: absolute;
 	top: auto;
-	bottom: $spacing;
-	right: $spacing;
+	bottom: 60px;
+	right: $spacing * 2;
 	left: auto;
 	z-index: 11;
 	color: #000;
